--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+// Possible fonts
+// 'Lato'
+// 'Open Sans'
+// 'Josefin Sans'
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html, body {
+  font-family: "Lato", Helvetica, sans-serif;}
+
+
+.l-section .header {
+  margin-bottom: 0.1em;
+}
+.l-section .content {
+  margin: 10px 0;
 }
