add reusable variables set

--- a/src/components/Hints/index.scss
+++ b/src/components/Hints/index.scss
@@ -1,4 +1,5 @@
+@import'./../../settings.scss';
 .c-hints .header {
   font-family: "Josefin Sans", Helvetica, sans-serif;
-  color: #172b4d;
+  color: $colorOne;
 }
