--- a/src/components/Predictions/index.scss
+++ b/src/components/Predictions/index.scss
@@ -1,10 +1,11 @@
+@import'./../../settings.scss';
 .c-predictions .header {
   font-family: "Josefin Sans", Helvetica, sans-serif;
-  color: #172b4d;
+  color: $colorOne;
 }
 .c-discipline {
   padding: 5px 10px;
   margin: 5px 0;
   border-radius: 3px;
-  border: 1px solid #172b4d;
+  border: 1px solid $colorOne;
 }
